@@ -1,3 +1,8 @@
+2012-04-26  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tkStubInit.c (Tk_GetHINSTANCE): Ensure that this is defined
+	for OSX.
+
 2012-04-26  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tk.decls:      [Bug 3508771]: Implement TkClipBox, Tk*Region and
